Added Age dependent birth-death beauti editor